Fixed recipe card title overflow on users page.

--- a/src/app/user-page/recipes-card-small/recipes-card-small.component.scss
+++ b/src/app/user-page/recipes-card-small/recipes-card-small.component.scss
@@ -29,6 +29,9 @@
     &__title-box{
         padding: 0 1rem;
         font-size: 2.5rem;
+        overflow: hidden;
+        overflow-x: hidden;
+        white-space: nowrap;
     }
     &:hover{
         cursor: pointer;
